# Evilution

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Organism.cpp  Organism.h  README.md  main.cpp  some_sources.txt
docs/: README.txt
src/: Board.cpp  Board.h  Configuration.cpp  Configuration.h  Organism.cpp  Organism.h  RandomGenerator.h  Simulation.cpp  Simulation.h  main.cpp
